test/error/parse/ExpectStructuredType.mod
MODULE ExpectStructuredType;
TYPE T = INTEGER;
END ExpectStructuredType.
